# revm

./: Cargo.toml
bins/revm-test/: CHANGELOG.md
bins/revme/: CHANGELOG.md
crates/bytecode/src/: decode_errors.rs  eip7702.rs  eof.rs
crates/bytecode/src/eof/: verification.rs
crates/bytecode/src/opcode/: parse.rs
crates/interpreter/: CHANGELOG.md
crates/interpreter/src/: instruction_result.rs  opcode.rs
crates/interpreter/src/interpreter/: analysis.rs
crates/optimism/: CHANGELOG.md  Cargo.toml
crates/optimism/src/: lib.rs  result.rs
crates/precompile/: CHANGELOG.md
crates/precompile/src/: interface.rs
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/: specification.rs
crates/revm/: CHANGELOG.md  Cargo.toml
crates/revm/src/: optimism.rs
crates/revm/src/optimism/: handler_register.rs
crates/wiring/src/: precompile.rs  result.rs  transaction.rs
examples/database_ref/src/: main.rs
